update import SO

--- a/views/menu.xml
+++ b/views/menu.xml
@@ -17,7 +17,7 @@
 
         <menuitem 
                     id="Export_0" 
-                    name="Export" 
+                    name="Tokopedia" 
                     sequence="20" />
                     
 		<menuitem id="Export_1" 
